--- a/src/components/Invoices/invoices.css
+++ b/src/components/Invoices/invoices.css
@@ -2,7 +2,6 @@
     margin: 20px auto; 
     border-radius: 8px; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
-    background-color: #ffffff; 
 }
 .invoice-hero {
     margin-top: 70px;
@@ -36,7 +35,7 @@
 }
 
 .invoice-table th {
-    background-color: #f4f4f4; 
+    /* background-color: #f4f4f4;  */
 }
 
 .total {
@@ -62,55 +61,55 @@
 
 
 .generate-button {
-    display: block; /* Full width button */
-    margin: 20px auto; /* Center button horizontally */
-    padding: 10px 20px; /* Padding inside button */
-    background-color: #4caf50; /* Green background */
-    color: white; /* White text color */
-    border: none; /* No border */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
+    display: block; 
+    margin: 20px auto; 
+    padding: 10px 20px; 
+    background-color: #4caf50; 
+    color: white; 
+    border: none; 
+    border-radius: 4px; 
+    cursor: pointer; 
 }
 
 .generate-button:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #45a049;
 }
 
 .current-invoice {
-    margin-top: 20px; /* Space above current invoice section */
+    margin-top: 20px; 
 }
 
 .download-button {
-    display: flex; /* Flexbox for icon and text alignment */
-    align-items: center; /* Center items vertically */
-    padding: 10px; /* Padding inside button */
-    background-color: #007bff; /* Blue background for download button */
-    color: white; /* White text color */
-    border-radius: 5px; /* Rounded corners */
-    border: none; /* No border */
-    cursor: pointer; /* Pointer cursor on hover */
+    display: flex; 
+    align-items: center; 
+    padding: 10px; 
+    background-color: #007bff; 
+    color: white; 
+    border-radius: 4px; 
+    border: none; 
+    cursor: pointer;
 }
 
 .download-button:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: #0056b3; 
 }
 
 .invoice-table {
-    width: 100%; /* Full width table */
-    border-collapse: collapse; /* Remove space between borders */
-    margin-top: 20px; /* Space above table */
+    width: 100%; 
+    border-collapse: collapse;
+    margin-top: 20px; 
 }
 
 .invoice-table th,
 .invoice-table td {
-    border: 1px solid #ddd; /* Light gray border */
-    padding: 10px; /* Padding inside cells */
+    border: 1px solid #ddd; 
+    padding: 10px; 
 }
 
 .invoice-table th {
-    background-color: #f4f4f4; /* Light gray background for header */
+    /* background-color: #f4f4f4;  */
 }
 
 .invoice-table tr:nth-child(even) {
-    background-color: #f9f9f9; /* Zebra striping for rows */
+    /* background-color: #f9f9f9;  */
 }
