--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -123,15 +123,12 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
   border-radius: 4px;
   z-index: 1001;
   width: 600px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 .supportTicket-modal-hero {
-  background-color: white;
-  color: black;
   padding: 20px;
   border-radius: 4px;
   z-index: 1001;
@@ -244,7 +241,7 @@
   justify-content: space-between;
 }
 .logout-close {
-  color: #aaa;
+  color: black;
   float: right;
   font-size: 28px;
   font-weight: bold;
